name:                minio-hs
version:             1.0.0
synopsis:            A Minio Haskell Library for Amazon S3 compatible cloud
                     storage.
description:         The Minio Haskell client library provides simple APIs to
                     access Minio, Amazon S3 and other API compatible cloud
                     storage servers.
homepage:            https://github.com/minio/minio-hs#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Minio Dev Team
maintainer:          dev@minio.io
category:            Network, AWS, Object Storage
build-type:          Simple
stability:           Experimental
extra-source-files:
                   CHANGELOG.md
                   CONTRIBUTING.md
                   docs/API.md
                   examples/*.hs
                   README.md
                   stack.yaml

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.Minio
                     , Network.Minio.S3API
  other-modules:       Lib.Prelude
                     , Network.Minio.API
                     , Network.Minio.Data
                     , Network.Minio.Data.ByteString
                     , Network.Minio.Data.Crypto
                     , Network.Minio.Data.Time
                     , Network.Minio.CopyObject
                     , Network.Minio.Errors
                     , Network.Minio.ListOps
                     , Network.Minio.PresignedOperations
                     , Network.Minio.PutObject
                     , Network.Minio.Sign.V4
                     , Network.Minio.Utils
                     , Network.Minio.XmlGenerator
                     , Network.Minio.XmlParser
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-extra
                     , containers
                     , cryptonite
                     , cryptonite-conduit
                     , data-default
                     , exceptions
                     , filepath
                     , http-client
                     , http-conduit
                     , http-types
                     , memory
                     , resourcet
                     , text
                     , text-format
                     , time
                     , transformers
                     , unliftio
                     , unliftio-core
                     , xml-conduit
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TupleSections

Flag live-test
  Default: True
  Manual: True

test-suite minio-hs-live-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             LiveServer.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeFamilies
  other-modules:       Lib.Prelude
                     , Network.Minio
                     , Network.Minio.API
                     , Network.Minio.CopyObject
                     , Network.Minio.Data
                     , Network.Minio.Data.ByteString
                     , Network.Minio.Data.Crypto
                     , Network.Minio.Data.Time
                     , Network.Minio.Errors
                     , Network.Minio.ListOps
                     , Network.Minio.PresignedOperations
                     , Network.Minio.PutObject
                     , Network.Minio.S3API
                     , Network.Minio.Sign.V4
                     , Network.Minio.Utils
                     , Network.Minio.Utils.Test
                     , Network.Minio.API.Test
                     , Network.Minio.XmlGenerator
                     , Network.Minio.XmlGenerator.Test
                     , Network.Minio.XmlParser
                     , Network.Minio.XmlParser.Test
  build-depends:       base
                     , minio-hs
                     , protolude >= 0.1.6
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-extra
                     , containers
                     , cryptonite
                     , cryptonite-conduit
                     , data-default
                     , directory
                     , exceptions
                     , filepath
                     , http-client
                     , http-conduit
                     , http-types
                     , memory
                     , QuickCheck
                     , resourcet
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , temporary
                     , text
                     , text-format
                     , time
                     , transformers
                     , unliftio
                     , unliftio-core
                     , xml-conduit
  if !flag(live-test)
    buildable: False

test-suite minio-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , minio-hs
                     , protolude >= 0.1.6
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-extra
                     , containers
                     , cryptonite
                     , cryptonite-conduit
                     , data-default
                     , directory
                     , exceptions
                     , http-client
                     , http-conduit
                     , http-types
                     , memory
                     , QuickCheck
                     , resourcet
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , temporary
                     , text
                     , text-format
                     , time
                     , transformers
                     , unliftio
                     , unliftio-core
                     , xml-conduit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeFamilies
  other-modules:       Lib.Prelude
                     , Network.Minio
                     , Network.Minio.API
                     , Network.Minio.Data
                     , Network.Minio.Data.ByteString
                     , Network.Minio.Data.Crypto
                     , Network.Minio.Data.Time
                     , Network.Minio.CopyObject
                     , Network.Minio.Errors
                     , Network.Minio.ListOps
                     , Network.Minio.PresignedOperations
                     , Network.Minio.PutObject
                     , Network.Minio.S3API
                     , Network.Minio.Sign.V4
                     , Network.Minio.Utils
                     , Network.Minio.Utils.Test
                     , Network.Minio.API.Test
                     , Network.Minio.XmlGenerator
                     , Network.Minio.XmlGenerator.Test
                     , Network.Minio.XmlParser
                     , Network.Minio.XmlParser.Test


source-repository head
  type:     git
  location: https://github.com/minio/minio-hs
